--- a/public/fila.css
+++ b/public/fila.css
@@ -1,8 +1,7 @@
-
 .container {
   padding: 2%;
-  height: 100%;
-  color: blueviolet;
+  font-size: 1.5rem;
+  color: #9900ff;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -53,30 +52,37 @@
   border: 2px solid white;
   border-radius: 10px;
   color: white;
+  cursor: pointer;
 }
 
 
 
 #game {
   flex-grow: 1;
-  background: linear-gradient(#9900ff, #6611ff);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   width: 100%;
+  height: 100%;
   display: none;
+  box-shadow: 0px 0px 6px 6px rgba(0, 0, 0, 0.1);
 }
 
 #game button {
   width: 100%;
-  background-color: transparent;
+  height: 100%;
   outline: none;
   font-size: 2rem;
   color: white;
   border: 2px solid white;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
+#game button:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
 
 #game button:nth-child(3n+0) { border-right: none; }/*  Pega a parte da direita */
 #game button:nth-child(3n+1) { border-left: none; } /*  Pega a parte da esquerda */
@@ -98,4 +104,61 @@
   background-color: transparent;
   color: #9900ff;
   font-size: 1.5rem;
+}
+
+#deuvelha {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  background: linear-gradient(90deg, #11aaff, #7703b9, #ff11aa);
+  color: white;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  display: none;
+}
+
+#deuvelha img {
+  width: 80%;
+  margin: 0 auto;
+  animation: velha 1s infinite alternate;
+}
+
+@keyframes velha {
+  0% { transform: rotate(-20deg)}
+  10% { transform: rotate(20deg)}
+  20% { transform: rotate(-20deg)}
+  30% { transform: rotate(20deg)}
+  40% { transform: rotate(-20deg)}
+  50% { transform: rotate(20deg)}
+  60% { transform: rotate(0deg)}
+  70% { transform: rotate(0deg)}
+  80% { transform: rotate(0deg)}
+  90% { transform: rotate(0deg)}
+  100% { transform: rotate(0deg)}
+}
+
+#deuvelha button {
+  background-color: transparent;
+  font-size: 2rem;
+  padding: 10px 25px;
+  margin-top: 10px;
+  outline: none;
+  border: 2px solid white;
+  border-radius: 10px;
+  color: white;
+}
+
+#deuvelha button a {
+  color: white;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 700px) {
+  .container {
+    max-width: 500px;
+    margin: 0 auto;
+  }
 }
