--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,15 @@
-body {
+html, body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   height: 100vh;
   max-width: 100%;
+  background: #dedede;
+}
+
+* {
+  font-weight: 400;
+  font-family: 'Rampart One', cursive;
 }
 
 #screen1 {
