--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="/fila.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/fila.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
   </div>
 
   <div id="deu-velha">
-    <img src="/velha.png" alt="">
+    <img src="/images/velha.png" alt="">
     <button><a href="/">Voltar e Aceitar</a></button>
   </div>
 
