--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/index.css">
   <title>Jogo da velha</title>
 </head>
 <body>
