--- a/views/voce.ejs
+++ b/views/voce.ejs
@@ -7,13 +7,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="/fila.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/fila.css">
   <title>Jogue contra você mesmo!</title>
 </head>
 <body>
   <div id="deu-velha">
-    <img src="/velha.png" alt="">
+    <img src="/images/velha.png" alt="">
     <button><a href="/">Voltar e Aceitar</a></button>
   </div>
 
