--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,5 +8,5 @@ html, body {
   margin: 0;
   box-sizing: border-box;
   font-weight: 400;
-  font-family: 'Rampart One', cursive;
+  font-family: 'Nunito Sans', sans-serif;
 }
