--- a/views/bot.ejs
+++ b/views/bot.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/fila.css">
   <title>Jogue contra você mesmo!</title>
@@ -94,7 +94,7 @@
         if(jogo.vezAtual === 'x') {
           infoJogo.innerText = `Quase, tente outra vez`
         } else {
-          infoJogo.innerText = `Parabens, você jogou muito!`
+          infoJogo.innerText = `Parabens, jogou muito!`
         }
 
       } else if (jogo.verificarVelha()) {
