--- a/public/css/fila.css
+++ b/public/css/fila.css
@@ -77,7 +77,7 @@
   background-color: transparent;
   outline: none;
   border: 2px solid white;
-  font-size: 2rem;
+  font-size: 3rem;
   color: white;
   cursor: pointer;
   padding: 30px 0;
@@ -103,15 +103,17 @@
   width: 100%;
   max-width: 500px;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #jogo-acoes button {
   border-radius: 20px;
-  padding: 10px 25px;
+  padding: 10px 30px;
   border: none;
   outline: none;
   background: linear-gradient(#9900ff, #6611ff);
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 #jogo-acoes button a {
@@ -137,7 +139,6 @@
   width: 250px;
   display: block;
 }
-
 
 #deu-velha img {
   width: 100%;
@@ -179,5 +180,8 @@
   #jogo {
     max-width: 500px;
     margin: 0 auto;
+  }
+
+  #jogo-acoes {
   }
 }
