Correção no bug que vazia a velha aparecer gigante no modo humano vs bot

--- a/views/bot.ejs
+++ b/views/bot.ejs
@@ -13,7 +13,9 @@
 </head>
 <body>
   <div id="deu-velha">
-    <img src="/images/velha.png" alt="">
+    <div class="img-velha">
+      <img src="/images/velha.png" alt="">
+    </div>
     <button><a href="/">Voltar e Aceitar</a></button>
   </div>
 
